kubernetes/gr-foundry/manifests/warden/kerbecs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kerbecs
  namespace: warden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kerbecs
  template:
    metadata:
      labels:
        app: kerbecs
    spec:
      containers:
        - name: kerbecs
          image: bk1031/kerbecs:latest
          ports:
            - containerPort: 10310
              name: gateway
            - containerPort: 10300
              name: admin
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: kerbecs-config
              mountPath: /etc/kerbecs
              readOnly: true
      volumes:
        - name: kerbecs-config
          configMap:
            name: kerbecs-config
---
apiVersion: v1
kind: Service
metadata:
  name: kerbecs
  namespace: warden
spec:
  selector:
    app: kerbecs
  ports:
    - name: gateway
      port: 10310
      targetPort: 10310
    - name: admin
      port: 10300
      targetPort: 10300
