kubernetes/gr-foundry/manifests/warden/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: warden
spec:
  type: ExternalName
  externalName: postgres-prod.postgres-prod.svc.cluster.local
