kubernetes/gr-foundry/manifests/warden/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: warden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/gaucho-racing/warden-server:latest
          ports:
            - containerPort: 9999
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: 9999
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: warden
spec:
  selector:
    app: server
  ports:
    - port: 9999
      targetPort: 9999
