kubernetes/gr-foundry/manifests/warden/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: warden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/gaucho-racing/warden-web:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: warden
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
